--- a/ui.html
+++ b/ui.html
@@ -40,8 +40,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://sharpist.join.com/jobs/469256-ui-ux-designer'>Job @ Sharpist (Berlin): UI/(UX) Designer | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ofpibfwR&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nkLaqMwW'>NICE inContact Careers - Software Engineer II - UI</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, Utah</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://helloprint.recruitee.com/l/fr/o/uiux-designer-internship-rotterdam'>
@@ -50,7 +54,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/voltaiq/jobs/1937977'>Job Application for UI/UX Designer at Voltaiq</a></h5> 
+<h5><a href='https://boards.greenhouse.io/voltaiq/jobs/1937977'>Job Application for UI/UX Designer at Voltaiq</a></h5> 
 <p><span class="badge badge-light">Berkeley, CA  Berkeley</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -66,7 +70,7 @@
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698317746-ux-ui-designer'>IBI Group UX/UI Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999698317746-ux-ui-designer'>IBI Group UX/UI Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Burnaby Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -172,7 +176,7 @@
 <p><span class="badge badge-light">Irving, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://helloprint.recruitee.com/l/en/o/uiux-designer-internship-rotterdam'>
+<h5><a href='https://helloprint.recruitee.com/l/en/o/uiux-designer-internship-rotterdam'>
       UI/UX Designer Internship - Helloprint
     </a></h5> 
 <p><span class="badge badge-light">Rotterdam</span></p>
@@ -182,7 +186,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://recruit.apo.ucla.edu/JPF05093'>Teaching and Learning Librarian for Library Special Collections (JPF05093) - UCLA Academic RECRUIT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.apo.ucla.edu/JPF05093'>Teaching and Learning Librarian for Library Special Collections (JPF05093) - UCLA Academic RECRUIT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -198,7 +202,7 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://we-recruit.join.com/jobs/466182-life-sciences-business-manager-basel'>Job @ WE RECRUIT (Basel): Life Sciences Business M... | JOIN</a></h5> 
+<h5><a href='https://we-recruit.join.com/jobs/466182-life-sciences-business-manager-basel'>Job @ WE RECRUIT (Basel): Life Sciences Business M... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -264,11 +268,11 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/pharmacy-technician-trainee-5631'>Pharmacy Technician, Trainee - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/pharmacy-technician-trainee-5631'>Pharmacy Technician, Trainee - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/clerk-iii-safety-and-security-5637'>Clerk III - Safety and Security - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/clerk-iii-safety-and-security-5637'>Clerk III - Safety and Security - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -284,7 +288,7 @@
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5631/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5631/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -300,7 +304,7 @@
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5635/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5635/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -358,7 +362,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://opsramp.recruitee.com/o/ui-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opsramp.recruitee.com/o/ui-developer'>
       UI Developer - OpsRamp, Inc.
     </a></h5> 
 <p><span class="badge badge-light">Hyderabad, India</span></p>
@@ -428,7 +432,7 @@
 <p><span class="badge badge-light">Omaha, Nebraska</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blacklane/jobs/4411096002'>Job Application for Senior UI/Visual Designer, Product (f/m/d) at BLACKLANE</a></h5> 
+<h5><a href='https://boards.greenhouse.io/blacklane/jobs/4411096002'>Job Application for Senior UI/Visual Designer, Product (f/m/d) at BLACKLANE</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -436,7 +440,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tui.join.com/jobs/467038-teamleiter-m-w-d-distribution-b2b-und-events'>Job @ TUI Austria Holding (Wien): Teamleiter (m/w/... | JOIN</a></h5> 
+<h5><a href='https://tui.join.com/jobs/467038-teamleiter-m-w-d-distribution-b2b-und-events'>Job @ TUI Austria Holding (Wien): Teamleiter (m/w/... | JOIN</a></h5> 
 <p><span class="badge badge-light">Wien, ?sterreich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -452,13 +456,9 @@
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MagnumSteelWorksInc/743999695972814-heavy-equipment-mechanics-2nd-shift-4-10-hr-shifts-with-a-4-day-weekend-every-other-weekend-'>Magnum Steel Works, Inc. HEAVY EQUIPMENT MECHANICS - 2nd Shift (4-10-hr shifts with a 4-day weekend every other weekend) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MagnumSteelWorksInc/743999695972814-heavy-equipment-mechanics-2nd-shift-4-10-hr-shifts-with-a-4-day-weekend-every-other-weekend-'>Magnum Steel Works, Inc. HEAVY EQUIPMENT MECHANICS - 2nd Shift (4-10-hr shifts with a 4-day weekend every other weekend) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://euraxess.ec.europa.eu/jobs/458313'>Postdoctoral in the field of natural sciences, field of biology, to work on HRZZ NZZ establishment project UIP-2017-05-5635 "Microbiome of loggerhead turtle (Caretta caretta): insight into episodic and endozoic communities (TurtleBIOME)" | EURAXESS</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-29</p>
 <hr/>
 
 
