--- a/biostatistics.html
+++ b/biostatistics.html
@@ -165,7 +165,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<h5><a href='https://tfscareers.workable.com/j/EE7AB7F098'>TFS - Jobs: Biostatistician, home or office based (m/w/d) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/EE7AB7F098'>TFS - Jobs: Biostatistician, home or office based (m/w/d) - Apply online</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -345,7 +345,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://adaptimmunellc.applytojob.com/apply/hqjye2SeOb/Biostatistician'>Biostatistician - Adaptimmune - Career Page</a></h5> 
+<h5><a href='http://adaptimmunellc.applytojob.com/apply/hqjye2SeOb/Biostatistician'>Biostatistician - Adaptimmune - Career Page</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -369,7 +369,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=ofqAafw9&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nhR5sLwV'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=ofqAafw9&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nhR5sLwV'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
